# mcp-coder-utils

./: .gitignore  .importlinter  .large-files-allowlist  .mcp.json  README.md  claude_local.bat  pyproject.toml  todo_issues.md  vulture_whitelist.py
.claude/: CLAUDE.md  settings.local.json
.claude/skills/issue_analyse/: SKILL.md
.github/workflows/: approve-command.yml  ci.yml
docs/architecture/: architecture.md
pr_info/: TASK_TRACKER.md  ci_problem_description.md  commit_message.txt  implementation_review_log_1.md  implementation_review_log_2.md  plan_review_log_1.md
pr_info/steps/: step_1.md  step_2.md  step_3.md  step_4.md  summary.md
src/mcp_coder_utils/: __init__.py  log_utils.py  redaction.py  subprocess_runner.py  subprocess_streaming.py
tests/: test_log_utils.py  test_log_utils_redaction.py  test_redaction.py  test_subprocess_runner.py  test_subprocess_runner_real.py  test_subprocess_streaming.py
tools/: reinstall_local.bat
